kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app
  labels:
    app: library-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library-app
  template:
    metadata:
      labels:
        app: library-app
    spec:
      containers:
      - name: library-app
        image: seifeddin86/library-management-app:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
