kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-app-service
spec:
  selector:
    app: library-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
